macros/tests/ui/multipart_on_tuple_struct.stderr
error: Unsupported shape `one unnamed field`. Expected named fields.
 --> tests/ui/multipart_on_tuple_struct.rs:3:10
  |
3 | #[derive(TryFromMultipart)]
  |          ^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `TryFromMultipart` (in Nightly builds, run with -Z macro-backtrace for more info)
