macros/tests/ui/multipart_on_tuple_struct.rs
use axum_typed_multipart::TryFromMultipart;

#[derive(TryFromMultipart)]
struct Data(String);

fn main() {}
